@@ -138,6 +138,7 @@ SCIP_RETCODE SCIPincludePresolMILP(
 #define DEFAULT_ENABLEPROBING      TRUE      /**< should the probing presolver be enabled within the presolve library? */
 #define DEFAULT_ENABLESPARSIFY     FALSE     /**< should the sparsify presolver be enabled within the presolve library? */
 #define DEFAULT_ENABLECLIQUEMERGE  FALSE     /**< should the clique merging presolver be enabled within the presolve library? */
+#define DEFAULT_ENABLEGF2          FALSE     /**< should the GF2 presolver be enabled within the presolve library? */
 
 /** parameters tied to a certain presolve technique in PaPILO */
 #define DEFAULT_MAXBADGESIZE_SEQ   15000     /**< the max badge size in Probing if PaPILO is executed in sequential mode */
@@ -188,6 +189,9 @@ struct SCIP_PresolMilpData
    SCIP_Bool enableparallelrows;             /**< should the parallel rows presolver be enabled within the presolve library? */
 #if PAPILO_APIVERSION >= 6
    SCIP_Bool enablecliquemerging;            /**< should the clique merging presolver be enabled within the presolve library? */
+#endif
+#if PAPILO_APIVERSION >= 13
+   SCIP_Bool enableGF2;                      /**< should the GF2 presolver be enabled within the presolve library? */
 #endif
    SCIP_Real modifyconsfac;                  /**< modify SCIP constraints when the number of nonzeros or rows is at most this
                                               *   factor times the number of nonzeros or rows before presolving */
@@ -426,6 +430,10 @@ SCIP_RETCODE setupPresolve(
                                     data->maxcliquesize, data->maxgreedycalls );
       presolve.addPresolveMethod( uptr( cliquemerging ) );
    }
+#endif
+#if PAPILO_APIVERSION >= 13
+   if( data->enableGF2 )
+      presolve.addPresolveMethod( uptr( new GF2<T>() ) );
 #endif
 
    /* exhaustive presolvers*/
@@ -1902,6 +1910,12 @@ SCIP_RETCODE SCIPincludePresolMILP(
          "presolving/" PRESOL_NAME "/maxgreedycalls",
          "maximal number of greedy max clique calls in a single thread",
          &presoldata->maxgreedycalls, FALSE, DEFAULT_MAXGREEDYCALLS, -1, INT_MAX, NULL, NULL) );
+#endif
+#if PAPILO_APIVERSION >= 13
+   SCIP_CALL( SCIPaddBoolParam(scip,
+         "presolving/" PRESOL_NAME "/enableGF2",
+         "should the GF2 presolver be enabled within the presolve library?",
+         &presoldata->enableGF2, TRUE, DEFAULT_ENABLEGF2, NULL, NULL) );
 #endif
 
    return SCIP_OKAY;
